--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ name = "ros2-video-recorder-mcp"
 version = "0.1.0"
 description = "MCP server for controlling ROS2 video recorder"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "mcp>=1.0.0",
     "opencv-python>=4.8.0",
-    "numpy>=1.24.0",
+    "numpy>=1.24.0,<2.0.0",
 ]
 
 [project.scripts]
